# InboxAgent

./: .gitignore  GUIDE.md  LICENSE  README.md  WINDOWS_BUILD_GUIDE.md  pyproject.toml  run_packaged.py
config/: accounts.yaml  rules.yaml
packaging/: build_deb.sh  build_msi.py  installer.nsi  open-email.service  open-email.spec
packaging/debian/: control  postinst  prerm
src/open_email/: __init__.py  actions.py  agent_core.py  ai_classifier.py  config_loader.py  email_parser.py  imap_client.py  main.py  rule_engine.py  summary.py
src/open_email/gui/: __init__.py  agent_thread.py  app.py
src/open_email/gui/tabs/: __init__.py  accounts.py  activity.py  dashboard.py  logs.py  rules.py  settings.py
src/open_email/gui/widgets/: __init__.py  log_handler.py  ui_helpers.py
src/open_email/platform/: __init__.py  autostart.py
tests/: test_actions.py  test_email_parser.py  test_rule_engine.py
