[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-email"
version = "0.1.0"
description = "Privacy-first local AI email organization agent"
requires-python = ">=3.10"
dependencies = [
    "imapclient>=3.0.0",
    "pyyaml>=6.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
gui = [
    "PyQt6>=6.6.0",
]
packaging = [
    "pyinstaller>=6.0",
    "cx_Freeze>=6.15",
]

[project.scripts]
open-email = "open_email.main:main"

[project.gui-scripts]
open-email-gui = "open_email.main:main_gui"

[tool.setuptools.packages.find]
where = ["src"]
